# fanuc_grinding

./: .gitignore  .travis.yml  LICENSE  README.md
alignment/: CMakeLists.txt  package.xml
alignment/src/: alignment.cpp
alignment/srv/: AlignmentService.srv
comparison/: CMakeLists.txt  package.xml
comparison/src/: comparison.cpp
comparison/srv/: ComparisonService.srv
documentation/: README.md
documentation/launcher/: README.md
execute_joint_state/: CMakeLists.txt  package.xml
execute_joint_state/src/: execute_joint_state.cpp
execute_joint_state/srv/: ExecuteJointStateService.srv
fanuc_grinding/: CMakeLists.txt  README.md  package.xml
grinding_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
grinding_rviz_plugin/config/: robot_state_visualize.rviz
grinding_rviz_plugin/launch/: grinding_application_r1000ia.launch
grinding_rviz_plugin/src/: alignment_widget.cpp  alignment_widget.h  comparison_widget.cpp  comparison_widget.h  grinding_rviz_plugin.cpp  grinding_rviz_plugin.h  path_planning_widget.cpp  path_planning_widget.h  post_processor_widget.cpp  post_processor_widget.h  scanning_widget.cpp  scanning_widget.h
grinding_rviz_plugin/tp_programs/: README.md
path_planning/: CMakeLists.txt  package.xml
path_planning/src/: path_planning.cpp
path_planning/srv/: PathPlanningService.srv
post_processor/: CMakeLists.txt  package.xml
post_processor/src/: post_processor.cpp
post_processor/srv/: PostProcessorService.srv
publish_meshfile/: CMakeLists.txt  package.xml
publish_meshfile/src/: publish_meshfile.cpp
publish_meshfile/srv/: PublishMeshfileService.srv
rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_plugin/config/: robot_state_visualize.rviz
rviz_plugin/launch/: r1000ia_sls_2.launch
rviz_plugin/src/: alignment_widget.cpp  alignment_widget.h  comparison_widget.cpp  comparison_widget.h  fanuc_grinding_rviz_plugin.cpp  fanuc_grinding_rviz_plugin.h  path_planning_widget.cpp  path_planning_widget.h  post_processor_widget.cpp  post_processor_widget.h  scanning_widget.cpp  scanning_widget.h
scanning/: CMakeLists.txt  package.xml
scanning/meshes/: DAC_580813_cad.stl  DAC_580813_scan.ply
scanning/src/: scanning.cpp  yaml_utils.h
scanning/srv/: ScanningService.srv
scanning/yaml/: camera_calibration.yaml  trajectory_DaC.yaml
