<package format="2">
  <name>fanuc_grinding_execute_joint_state</name>
  <version>0.0.0</version>
  <description>Execute Joint State</description>
  <author>Kévin Bolloré, Victor Lamoine</author>
  <maintainer email="victor.lamoine@institutmaupertuis.fr">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>tf_conversions</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>fanuc_r1000ia_sls_2_grinding_moveit_config</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
