<package format="2">
  <name>fanuc_grinding_path_planning</name>
  <version>0.0.0</version>
  <description>Path Planning of grinding demonstrator</description>
  <author>Kévin Bolloré, Victor Lamoine</author>
  <maintainer email="victor.lamoine@institutmaupertuis.fr">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bezier_library</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz_visual_tools</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>bezier_library</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>bezier_library</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
</package>
