<package format="2">
  <name>fanuc_grinding_publish_meshfile</name>
  <version>0.0.0</version>
  <description>Node which publish meshfile as marker in grinding demonstrator</description>
  <author>Kévin Bolloré, Victor Lamoine</author>
  <maintainer email="victor.lamoine@institutmaupertuis.fr">Victor Lamoine</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>fanuc_r1000ia_sls_2_grinding_moveit_config</exec_depend>
</package>
